--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -177,6 +177,7 @@ aside {
   border: 1px solid #e8e8e8;
   border-radius: 5px;
   margin-top: 20px;
+  margin-bottom: 20px;
 
   .user {
     margin-top: 5em;
